--- a/src/assets/style/global/global.css
+++ b/src/assets/style/global/global.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
-a {
+#app {
+  font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+}
+
+#app a {
   text-decoration: none;
 }
 
-ul {
+#app ul {
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-#app {
-  font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
 }
